# EmptyGL

./: .gitignore  CMakeLists.txt  main.cpp
include/: camera.h  geometry.h  mesh.h  scene.h  shader.h
shaders/: empty.frag  empty.vert
src/: CMakeLists.txt  camera.cpp  geometry.cpp  mesh.cpp  scene.cpp  shader.cpp
test/: CMakeLists.txt  test.cpp
